# eosio_table_entry_plugin

./: CMakeLists.txt  README.md  table_entry_plugin.cpp
include/eosio/table_entry_plugin/: table_entry_plugin.hpp
